ammo js intialisation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@splidejs/splide": "^4.0.2",
+    "ammo.js": "github:kripken/ammo.js",
     "babel-loader": "^8.2.5",
     "cannon": "^0.6.2",
     "cannon-es": "^0.19.0",
@@ -21,6 +22,7 @@
     "html-webpack-plugin": "^5.5.0",
     "lil-gui": "^0.16.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "path-browserify": "^1.0.1",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
