--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@splidejs/splide": "^4.0.2",
+    "ammo-debug-drawer": "^1.0.1",
     "ammo.js": "github:kripken/ammo.js",
     "babel-loader": "^8.2.5",
     "cannon": "^0.6.2",
